--- a/three.html
+++ b/three.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Waffless</title><!-- Name of Website-->
+  <title>BackyardFilms</title><!-- Name of Website-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -21,7 +21,7 @@
   <!-- Navigation -->
   <nav class='navbar navbar-expand-lg nav-fill'>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="css/img/waf.png"></img></a>
+      <a class="navbar-brand" href="#"><img src="css/img/logo.png"></img></a>
       <!--src = location of logo image -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"><img src="css/img/icon.png"></img></span>
@@ -29,16 +29,16 @@
       <div class="collappse navbar-collapse nav-fill " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" style='color:black' href="one.html">Home</a><!-- href = is link, booking is text of button-->
+            <a class="nav-link" style='color:black' href="booking.html">booking</a><!-- href = is link, booking is text of button-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="two.html">One</a>
+            <a class="nav-link" style="color:black" href="#clean">Clean Procedures</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="three.html">Two</a>
+            <a class="nav-link" style="color:black" href="#about-us">About US</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="four.html">Three</a>
+            <a class="nav-link" style="color:black" href="#reviews">Google Reviews</a>
           </li>
         </ul>
       </div>
