--- a/four.html
+++ b/four.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BackyardFilms</title><!-- Name of Website-->
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -21,7 +21,7 @@
   <!-- Navigation -->
   <nav class='navbar navbar-expand-lg nav-fill'>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="css/img/logo.png"></img></a>
+      <a class="navbar-brand" href="index.html"><img src="css/img/waf.png"></img></a>
       <!--src = location of logo image -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"><img src="css/img/icon.png"></img></span>
@@ -29,163 +29,21 @@
       <div class="collappse navbar-collapse nav-fill " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" style='color:black' href="booking.html">booking</a><!-- href = is link, booking is text of button-->
+            <a class="nav-link" style='color:black' href="one.html">Home</a><!-- href = is link, booking is text of button-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="#clean">Clean Procedures</a>
+            <a class="nav-link" style="color:black" href="two.html">One</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="#about-us">About US</a>
+            <a class="nav-link" style="color:black" href="three.html">Two</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" style="color:black" href="#reviews">Google Reviews</a>
+            <a class="nav-link" style="color:black" href="four.html">Three</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-
-
-
-
-  <!--- Jumbotron -->
-  <div class="jumbotron jumbotron bg-cover">
-    <h1 class="display-4">We Bring the Movie Theatre to your Backyard!</h1> <!-- Heading Text on homeopage-->
-    <p class="lead">Create lasting family memories with our professional-grade movie theatre setup.</p> <!-- paragraph under heading-->
-    <p class="lead">
-      <a class="btn btn-home btn-primary btn-lg  " href="booking.html" role="button">Book here</a> <!-- Name of Butoon is the grey-->
-    </p>
-  </div>
-
-  <!-- More Info-->
-<div class ="more-info">
-<div class="jumbotron jumbotron jumbotron-custom" style="background-color: #ffffff">
-  <h1 class="display-4">More Info</h1> <!-- Heading Text on homepage-->
-  <p class="lead">Our team will handle the setup and removal of our top-of-the-line outdoor movie theatre equipment. We currently serve the cities of Menlo Park, Atherton, Woodside, Redwood City, San Carlos, Palo Alto, Los Altos, and Portola Valley.</p> <!-- paragraph under heading-->
-  <p class="lead">
-  </p>
-  <hr>
-</div>
-</div>
-
-
-  <!-- Clean Procedures-->
-  <div id="clean">
-    <br>
-    <div class="clean-text">
-      <div class="container-fluid padding">
-        <div class="row padding">
-          <div class="col-md-12 col-lg-6">
-            <h1>Cleanliness Procedures<h1>
-                <p>Due to COVID-19, safety is our #1 priority, and our team is taking precautions to keep you and your guests safe.
-                  Our projectors, speakers, screens and other equipment are extensively cleaned with disinfectant before and after each use. Additionally, our team wears masks and gloves during setup and takedown. We also use a contactless digital
-                  payment system.
-                </p>
-          </div>
-          <div class="col-lg-6 ">
-            <img class="img-fluid " src="css/img/clean.jpg"></img>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-    <!-- About US-->
-    <br>
-    <br>
-    <div class="about-text">
-      <div id="about-us"></div>
-      <div class="container-fluid padding">
-        <div class="row padding">
-          <div class="col-md-12 col-lg-6">
-            <img class="img-fluid " src="css/img/about.jpg"></img>
-          </div>
-          <div class="col-lg-6 ">
-            <h1>About Us<h1>
-                <p>Due to COVID-19, safety is our #1 priority, and our team is taking precautions to keep you and your guests safe.
-                  Our projectors, speakers, screens and other equipment are extensively cleaned with disinfectant before and after each use. Additionally, our team wears masks and gloves during setup and takedown. We also use a contactless digital
-                  payment system.
-
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- DO NOT TOUCH-->
-    <!--- Google Review -->
-    <br>
-    <br>
-    <hr>
-    <div id="reviews"></div>
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-c6b14ac2-665d-4b89-bcf9-c7fde9990098"></div>
-    <br>
-    <br>
-
-
-
-
-
-
-    <!--- Footer -->
-    <footer>
-      <div class="container-fluid padding">
-        <div class="row text-center">
-          <div class="col-md-4">
-            <img class="image-thumbnail" src="css/img/logo.png">
-            <hr class="light">
-            <p>Founders:</p>
-            <p>Connor Spackman</p>
-            <p>Danny Salinger-Brown</p>
-            <p></p>
-          </div>
-          <div class="col-md-4">
-            <hr class="light">
-            <h5>Contact Us</h5>
-            <hr class="light">
-            <p>backyardfilms.menlopark@gmail.com</p>
-            <p>(650)-690-1491</p>
-            <p>(650)-353-0828</p>
-            <p></p>
-            <p></p>
-          </div>
-          <div class="col-md-4">
-            <hr class="light">
-            <h5>Serving</h5>
-            <hr class="light">
-            <p>Atherton</p>
-            <p>Palo Alto</p>
-            <p>Woodside</p>
-            <p>Menlo Park</p>
-            <p>And More! </p>
-          </div>
-          <div class="col-12">
-            <hr class="light">
-            <h5>&copy; backyardfilms.co</h5>
-    </footer>
-
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/7.17.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-    <!-- DO NOT TOUCH-->
-
 </body>
-
+Last page
 </html>
