--- a/Lab 828/index.html
+++ b/Lab 828/index.html
@@ -4,12 +4,12 @@
   <head>
     <title>Canvas Demo</title>
     <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <script src="domdemo.js"></script>
+    <script src="domedemo.js"></script>
   </head>
 
   <body>
     <div id = "myDiv"></div>
-    <canvas id = "cnv"></canvas>
+  <canvas id="myCanvas" width="800" height="800"></canvas>
   </body>
 
 </html>
