--- a/Lab 1015/index.html
+++ b/Lab 1015/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="mystyles.css">
     <script src="balls.js"></script>
     <script src="GameArea.js"></script>
+    <script src="Game.js"></script>
     <script src="main.js"></script>
 
 
@@ -12,7 +13,7 @@
 
   <body>
     <div id ="wrapperDiv"></div>
-    <canvas id = "cnv"></canvas>
+    <canvas id = "cnv" height="600px" width="500px"></canvas>
   </body>
 
 </html>
