--- a/Lab 925 Vectors/index.html
+++ b/Lab 925 Vectors/index.html
@@ -7,6 +7,7 @@
     <script src="jsvector.js"></script>
     <script src="gamearea.js"></script>
     <script src="game.js"></script>
+    <script src="bubble.js"></script>
 
   </head>
 
