--- a/Project 1009/index.html
+++ b/Project 1009/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project</title>
+    <title>Dom Start Template</title>
     <link rel="stylesheet" type="text/css" href="mystyles.css">
     <script src="main.js"></script>
+    <script src="jsvector.js"></script>
     <script src="gamearea.js"></script>
     <script src="game.js"></script>
     <script src="bubble.js"></script>
-    <script src="jsvector.js"></script>
+
   </head>
 
   <body>
