--- a/Project 1009/index.html
+++ b/Project 1009/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Dom Start Template</title>
-    <link rel="stylesheet" type="text/css" href="mystyles.css">
-    <script src="jsvector.js"></script>
-    <script src="main.js"></script>
-    <script src="gamearea.js"></script>
-    <script src="game.js"></script>
-    <script src="bubble.js"></script>
 
-  </head>
+<head>
+  <title>Attraction and Repulsion</title>
+  <link rel="stylesheet" type="text/css" href="mystyles.css">
+  <script src="jsvector.js"></script>
+  <script src="main.js"></script>
+  <script src="gamearea.js"></script>
+  <script src="game.js"></script>
+  <script src="bubble.js"></script>
 
-  <body>
-  </body>
+</head>
+
+<body>
+</body>
+
 </html>
