--- a/Lab 1020 Orbital/index.html
+++ b/Lab 1020 Orbital/index.html
@@ -8,7 +8,8 @@
   <script src="main.js"></script>
   <script src="gamearea.js"></script>
   <script src="game.js"></script>
-  <script src="bubble.js"></script>
+  <script src="Mover.js"></script>
+    <script src="Orbitor.js"></script>
 
 </head>
 
