--- a/SEMESTER TWO/2021 Lab 120 with buttons/index.html
+++ b/SEMESTER TWO/2021 Lab 120 with buttons/index.html
@@ -8,6 +8,7 @@
     <script src="main.js"></script>
     <script src="ecosystem.js"></script>
     <script src="cell.js"></script>
+    <script src="player.js"></script>
   </head>
 
   <body>
